[Fix] ref #10 - Display of Ozwillo logo on small screens

--- a/public/css/specific.css
+++ b/public/css/specific.css
@@ -27,13 +27,28 @@ a:focus, a:hover {
     text-decoration: none;
 }
 
+.navbar {
+    margin-bottom: 5px;
+}
+
 .navbar-default {
     background-color: transparent;
     border-color: transparent;
 }
 
+.navbar-brand {
+    padding: 10px;
+}
+
+.navbar-brand > img {
+    max-height: 100%;
+    height: 100%;
+    width: auto;
+    margin: 0 auto;
+}
+
 #ozwillo-navbar {
-    margin-top: 15px;
+    margin-top: 10px;
 }
 
 .btn-primary img {
